kube-system/cilium/resources/hubble-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  annotations:
    gethomepage.dev/description: Hubble
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: sh-cilium-hubble.svg
    gethomepage.dev/name: Hubble
    gethomepage.dev/href: "https://hubble.jef.app"
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - hubble.jef.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
          group: ''
          kind: Service
          weight: 1
